# publica

./: .gitignore  README.MD  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
publica/: __init__.py  __main__.py
publica/importer/: __init__.py  base.py  wikipedia.py
